# api/v1alpha1/shortlink_types.go
@@ -28,16 +28,16 @@ type ShortLinkSpec struct {
 	Target string `json:"target"`
 
 	// RedirectAfter specifies after how many seconds to redirect (Default=3)
-	// +kubebuilder:default:=3
+	// +kubebuilder:default:=0
 	// +kubebuilder:validation:Minimum=0
 	// +kubebuilder:validation:Maximum=99
 	RedirectAfter int64 `json:"after,omitempty"`
 
 	// Code is the URL Code used for the redirection.
-	// leave on default (200) when using the HTML behavior. However, if you whish to use a HTTP 3xx redirect, set to the appropriate 3xx status code
+	// leave on default (307) when using the HTML behavior. However, if you whish to use a HTTP 3xx redirect, set to the appropriate 3xx status code
 	// +kubebuilder:validation:Enum=200;300;301;302;303;304;305;307;308
-	// +kubebuilder:default:=200
-	Code int `json:"code,omitempty" enums:"200,300,301,302,303,304,305,307,308"`
+	// +kubebuilder:default:=307
+	Code int `json:"code,omitempty" enums:"307,200,300,301,302,303,304,305,308"`
 }
 
 // ShortLinkStatus defines the observed state of ShortLink
